[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Tiles/pixil-frame-0.png" type="Texture" id=2]
[ext_resource path="res://Theme/Default.tres" type="Theme" id=3]
[ext_resource path="res://Fonts/16bfZX.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.639216 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 14.5032, 6.72032 )
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Contiune" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -23.0
margin_right = 188.0
margin_bottom = 26.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 3 )
action_mode = 0
text = "Contiune"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selector" type="Label" parent="Contiune"]
margin_left = -32.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 43.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = ">"

[node name="Fullscreen" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 9.0
margin_right = 188.0
margin_bottom = 58.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 3 )
action_mode = 0
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selector2" type="Label" parent="Fullscreen"]
margin_left = -32.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 43.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 41.0
margin_right = 188.0
margin_bottom = 90.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 3 )
action_mode = 0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selector3" type="Label" parent="Quit"]
margin_left = -32.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 43.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 200.0
margin_top = 72.0
margin_right = 284.0
margin_bottom = 96.0
theme = ExtResource( 3 )
text = "Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Contiune" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
